[package]
name = "ccvault"
version = "0.1.1"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "7"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
zeroize = { version = "1", features = ["derive"] }
